# AutoPaper2

./: .gitignore  AGENTS.md  README.md  README_CN.md  pyproject.toml
config/: email_config.yaml.template  figure_style_profiles.yaml  gate_rubrics.yaml  image_generation.yaml  public_db.yaml  ssh_servers.yaml  user_requirement_trace.yaml  venue_registry.yaml
docs/: 07_MD_PROTOCOL.md  AUTOPAPER2_AUDIT_AND_OPTIMIZATION.md  EXTERNAL_OPEN_SOURCE_COMPARISON.md
scripts/: __init__.py  agent_consistency_check.py  agent_dispatch.py  agent_run_log.py  cli_compat_check.py  code_execution_ledger.py  conductor_helper.py  context_budget.py  email_monitor.py  env_probe.py  experiment_watchdog.py  full_pipeline_simulator.py  generate_image.py  literature_ingestion.py  m6_action_router.py  markdown_section_hash.py  orchestrator_guard.py  paperreview_uploader.py  requirement_trace_check.py  resource_planner.py  skill_index.py  ssh_manager.py  state_manager.py  subagent_launch_prompt.py  test_health_check.py
skills/: index.yaml
spiral/: __init__.py  agent_runtime.py  conductor.py  dispatch.py  literature_ingestion.py  project.py  project_entry.py  review_registry.py  revision_router.py  ssh_registry.py  state.py  survey_memory.py  verdict_parser.py
tests/: test_agent_runtime.py  test_cli_compat.py  test_code_execution_ledger.py  test_context_budget.py  test_dispatch.py  test_experiment_watchdog.py  test_full_pipeline_simulation.py  test_gate_rubric.py  test_literature_ingestion.py  test_m1_e2e.py  test_m1_integration.py  test_m3_integration.py  test_m4_integration.py  (+9 more)
(+201 files in other folders)
